// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorRecoveryDemo Snapshot matches snapshot in initial state 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      Error Recovery & Graceful Degradation
    </h2>
    <p
      class="text-gray-600"
    >
      Experience how AI systems handle failures and provide recovery options
    </p>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <form
        class="mb-6"
      >
        <div
          class="border border-gray-200 rounded-lg overflow-hidden"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              AI Query Input
            </span>
            <div
              class="flex items-center"
            >
              <svg
                class="w-5 h-5 text-green-600"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="ml-2 text-sm font-medium text-green-600"
              >
                Working
              </span>
            </div>
          </div>
          <input
            class="w-full p-4 focus:outline-none focus:ring-2 focus:ring-blue-500"
            placeholder="Try keywords: 'error', 'timeout', 'unavailable', 'low confidence', 'success'"
            type="text"
            value=""
          />
        </div>
        <button
          class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed transition-colors"
          disabled=""
          type="submit"
        >
          Process Query
        </button>
      </form>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3"
        >
          System Status
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              State:
            </span>
            <span
              class="font-medium text-green-600"
            >
              Working
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Confidence:
            </span>
            <span
              class="font-medium"
            >
              100
              %
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Retry Count:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-green-900 mb-3"
        >
          Error Types
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Timeout
            </div>
            <div
              class="text-green-700"
            >
              Service takes too long
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unavailable
            </div>
            <div
              class="text-green-700"
            >
              Service is down
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Low Confidence
            </div>
            <div
              class="text-green-700"
            >
              Uncertain results
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unexpected
            </div>
            <div
              class="text-green-700"
            >
              Unknown errors
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-purple-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-purple-900 mb-3"
        >
          Recovery Strategies
        </h3>
        <ul
          class="text-sm space-y-2"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Automatic retry with backoff
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Fallback to cached results
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Graceful degradation
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            User feedback collection
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorRecoveryDemo Snapshot matches snapshot with error state 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      Error Recovery & Graceful Degradation
    </h2>
    <p
      class="text-gray-600"
    >
      Experience how AI systems handle failures and provide recovery options
    </p>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <form
        class="mb-6"
      >
        <div
          class="border border-gray-200 rounded-lg overflow-hidden"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              AI Query Input
            </span>
            <div
              class="flex items-center"
            >
              <svg
                class="w-5 h-5 text-red-600"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="ml-2 text-sm font-medium text-red-600"
              >
                Error
              </span>
            </div>
          </div>
          <input
            class="w-full p-4 focus:outline-none focus:ring-2 focus:ring-blue-500"
            placeholder="Try keywords: 'error', 'timeout', 'unavailable', 'low confidence', 'success'"
            type="text"
            value="error"
          />
        </div>
        <button
          class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed transition-colors"
          type="submit"
        >
          Process Query
        </button>
      </form>
      <div
        class="mb-6 p-4 border border-red-200 bg-red-50 rounded-lg"
      >
        <div
          class="flex items-start mb-3"
        >
          <svg
            class="w-5 h-5 text-red-600 mt-0.5 mr-2"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <div>
            <h4
              class="font-semibold text-red-900"
            >
              Unexpected
               Error
            </h4>
            <p
              class="text-red-800 mt-1"
            >
              An unexpected error occurred while processing your request
            </p>
          </div>
        </div>
        <h5
          class="font-semibold text-red-900 mb-2"
        >
          Recovery Options:
        </h5>
        <div
          class="space-y-2"
        >
          <button
            class="w-full text-left p-3 bg-white border border-red-200 rounded hover:bg-red-50 transition-colors"
          >
            <div
              class="font-medium text-red-900"
            >
              Try Again
            </div>
            <div
              class="text-sm text-red-700"
            >
              Retry the same operation
            </div>
          </button>
          <button
            class="w-full text-left p-3 bg-white border border-red-200 rounded hover:bg-red-50 transition-colors"
          >
            <div
              class="font-medium text-red-900"
            >
              Simplify Query
            </div>
            <div
              class="text-sm text-red-700"
            >
              Use a simpler version of your query
            </div>
          </button>
          <button
            class="w-full text-left p-3 bg-white border border-red-200 rounded hover:bg-red-50 transition-colors"
          >
            <div
              class="font-medium text-red-900"
            >
              Manual Mode
            </div>
            <div
              class="text-sm text-red-700"
            >
              Switch to manual processing
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3"
        >
          System Status
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              State:
            </span>
            <span
              class="font-medium text-red-600"
            >
              Error
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Confidence:
            </span>
            <span
              class="font-medium"
            >
              100
              %
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Retry Count:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-green-900 mb-3"
        >
          Error Types
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Timeout
            </div>
            <div
              class="text-green-700"
            >
              Service takes too long
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unavailable
            </div>
            <div
              class="text-green-700"
            >
              Service is down
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Low Confidence
            </div>
            <div
              class="text-green-700"
            >
              Uncertain results
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unexpected
            </div>
            <div
              class="text-green-700"
            >
              Unknown errors
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-purple-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-purple-900 mb-3"
        >
          Recovery Strategies
        </h3>
        <ul
          class="text-sm space-y-2"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Automatic retry with backoff
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Fallback to cached results
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Graceful degradation
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            User feedback collection
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorRecoveryDemo Snapshot matches snapshot with query input 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6"
  >
    <h2
      class="text-2xl font-bold text-gray-900 mb-2"
    >
      Error Recovery & Graceful Degradation
    </h2>
    <p
      class="text-gray-600"
    >
      Experience how AI systems handle failures and provide recovery options
    </p>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <form
        class="mb-6"
      >
        <div
          class="border border-gray-200 rounded-lg overflow-hidden"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200 flex justify-between items-center"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              AI Query Input
            </span>
            <div
              class="flex items-center"
            >
              <svg
                class="w-5 h-5 text-green-600"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <span
                class="ml-2 text-sm font-medium text-green-600"
              >
                Working
              </span>
            </div>
          </div>
          <input
            class="w-full p-4 focus:outline-none focus:ring-2 focus:ring-blue-500"
            placeholder="Try keywords: 'error', 'timeout', 'unavailable', 'low confidence', 'success'"
            type="text"
            value="test query"
          />
        </div>
        <button
          class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed transition-colors"
          type="submit"
        >
          Process Query
        </button>
      </form>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-blue-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-blue-900 mb-3"
        >
          System Status
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              State:
            </span>
            <span
              class="font-medium text-green-600"
            >
              Working
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Confidence:
            </span>
            <span
              class="font-medium"
            >
              100
              %
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-blue-700"
            >
              Retry Count:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-green-900 mb-3"
        >
          Error Types
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Timeout
            </div>
            <div
              class="text-green-700"
            >
              Service takes too long
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unavailable
            </div>
            <div
              class="text-green-700"
            >
              Service is down
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Low Confidence
            </div>
            <div
              class="text-green-700"
            >
              Uncertain results
            </div>
          </div>
          <div
            class="p-2 bg-white rounded border"
          >
            <div
              class="font-medium text-green-900"
            >
              Unexpected
            </div>
            <div
              class="text-green-700"
            >
              Unknown errors
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-purple-50 rounded-lg p-4"
      >
        <h3
          class="font-semibold text-purple-900 mb-3"
        >
          Recovery Strategies
        </h3>
        <ul
          class="text-sm space-y-2"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Automatic retry with backoff
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Fallback to cached results
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Graceful degradation
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-purple-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            User feedback collection
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
